--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.21.1",
     "canvas": "^2.8.0",
     "discord-resolve": "^1.2.0",
-    "discord.js": "^13.0.0-dev.807ea2d3c197c7c6556bd1c894114932f6657d49",
+    "discord.js": "^13.0.1",
     "moment": "^2.29.1",
     "ms": "^2.1.2"
   }
