--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "canvas": "^2.8.0",
-    "discord-resolve": "^1.2.0",
+    "discord-resolve": "^1.2.0-beta.0",
     "discord.js": "^13.0.1",
     "moment": "^2.29.1",
     "ms": "^2.1.2"
